[package]
name = "moon_os"
description = "MoonOS: A 64-bit x86 toy operating system."
authors = ["vzwGrey <vzwgrey@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
stivale-boot = "0.2.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.1"
x86_64 = "0.14.9"
pic8259 = "0.10.2"
uart_16550 = "0.2.18"
circbuf = { git = "https://github.com/vzwGrey/circbuf-rs", rev = "8a4d7d5" }
